Role management in resolution, contextualization and session state